Component #1 z-index fix

--- a/components/1/component.css
+++ b/components/1/component.css
@@ -21,18 +21,25 @@ header {
 	overflow: auto;
 }
 
+header > section:nth-of-type(1) ul li {
+	position: relative;
+	z-index: 1;
+}
+
 header > section:nth-of-type(1) ul:nth-of-type(1) {
 	margin-bottom: 20px;
-	width: 40%;
+	width: 50%;
+	float: left;
 }
 
 header > section:nth-of-type(1) ul:nth-of-type(2) {
 	margin-bottom: 20px;
-	width: 60%;
+	width: 50%;
+	text-align: right;
 	float: left;
 }
 
-header > section:nth-of-type(1) ul::before {
+header > section ul::before {
 	background-color: #3b363a;
 	position: absolute;
 	content: "";
@@ -62,10 +69,15 @@ header > section:nth-of-type(1) ul:nth-of-type(1) li a {
 	height: 46px;
 }
 
+header > section:nth-of-type(1) ul:nth-of-type(2) li {
+	display: inline-block;
+}
+
 header > section:nth-of-type(1) ul:nth-of-type(2) li a {
 	color: #fff;
-	text-align: right;
-	display: inline-block;
+	display: block;
+	height: 46px;
+	padding: 12px 20px;
 }
 
 header > section:nth-of-type(1) ul > li:first-child a {
@@ -94,11 +106,6 @@ header > section:nth-of-type(1) ul .instagram {
 
 header > section:nth-of-type(1) ul .rss {
 	background-image: url("images/rss.jpg");
-}
-
-header section:nth-of-type(1) ul:nth-of-type(1){
-	float: left;
-	width: 40%;
 }
 
 /* MAIN SECTION ======================================== */
